[gd_scene load_steps=5 format=2]

[ext_resource path="res://ClientMain.gd" type="Script" id=1]
[ext_resource path="res://shared/maps/map0.tscn" type="PackedScene" id=2]
[ext_resource path="res://shared/gameplay/WorldSimulation.gd" type="Script" id=4]
[ext_resource path="res://gameplay/LocalPlayerController.gd" type="Script" id=5]

[node name="ClientMain" type="Node"]
script = ExtResource( 1 )

[node name="LocalPlayerController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="WorldSimulation" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="map0" parent="WorldSimulation" instance=ExtResource( 2 )]

[node name="DirectionalLight" type="DirectionalLight" parent="WorldSimulation"]
transform = Transform( 0.637948, 0.619545, -0.457369, 0, 0.593924, 0.804521, 0.770079, -0.513243, 0.378893, 0, 7.83814, 0 )
